--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@react-navigation/bottom-tabs": "^7.2.0",
-    "@react-navigation/native": "^7.0.14",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "axios": "^1.8.1",
     "expo": "~52.0.37",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.7",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
+    "expo-image-picker": "~16.0.6",
     "expo-linking": "~7.0.5",
     "expo-router": "^4.0.17",
     "expo-splash-screen": "~0.29.22",
@@ -34,16 +34,15 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
-    "react-native-camera": "^4.2.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-svg": "^15.11.2",
+    "react-native-svg": "15.8.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-vision-camera": "^4.6.4",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
-    "expo-image-picker": "~16.0.6"
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -51,14 +50,16 @@
     "@react-native-community/cli": "latest",
     "@react-native/metro-config": "^0.78.0",
     "@types/jest": "^29.5.12",
+    "@types/node": "^22.13.9",
     "@types/react": "~18.3.12",
-    "@types/react-native": "^0.72.8",
     "@types/react-test-renderer": "^18.3.0",
+    "graceful-fs": "^4.2.11",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.4",
+    "metro-react-native-babel-preset": "^0.77.0",
     "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.3.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.8.2"
   },
   "private": true
 }
