Undoing JWT, using session managemnet, fixing add medicine

--- a/app.json
+++ b/app.json
@@ -3,6 +3,9 @@
     "name": "medicine-ai",
     "slug": "medicine-ai",
     "version": "1.0.0",
+    "extra": {
+      "API_BASE_URL": "http://192.168.0.114:5002"
+    },
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "scheme": "myapp",
