--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "8.2.0",
     "axios": "^1.8.1",
     "expo": "~52.0.37",
     "expo-blur": "~14.0.3",
@@ -31,9 +32,11 @@
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
+    "jwt-decode": "^4.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
@@ -48,6 +51,7 @@
     "@babel/core": "^7.25.2",
     "@babel/preset-react": "^7.26.3",
     "@react-native-community/cli": "latest",
+    "@react-native/babel-preset": "^0.78.0",
     "@react-native/metro-config": "^0.78.0",
     "@types/jest": "^29.5.12",
     "@types/node": "^22.13.9",
